# miryoku_zmk

./: .envrc  AGENTS.md  flake.nix  justfile  pyproject.toml
config/: splitkb_aurora_sweep.conf  splitkb_aurora_sweep.keymap
keymap-drawer/: a_dux.yaml  adv360.yaml  adv360pro.yaml  bad_wings.yaml  barobord.yaml  bat43.yaml  ble_chiffre.yaml  breeze.yaml  chipper.yaml  chocv.yaml  clog.yaml  clog_v2.yaml  contra.yaml  crbn.yaml  dactyl_manuform_4x5.yaml  dao.yaml  dilemma.yaml  draculad.yaml  eek.yaml  elephant42.yaml  ergodash.yaml  ergonaut_one.yaml  ergotravel.yaml  ffkb-holyiot.yaml  ffkb.yaml  gatoraid40.yaml  glove80.yaml  helix.yaml  hillside48.yaml  horizon.yaml  humla.yaml  hummingbird.yaml  iris.yaml  jian.yaml  jiran.yaml  jorne.yaml  klacker_bs.yaml  klein.yaml  klor.yaml  klotz.yaml  (+37 more)
miryoku/: custom_config.h  miryoku_clipboard.h
miryoku/mapping/34/: ferris.h
scripts/: generate_layout_pdf.py  serial-monitor.sh  usb-monitor.sh
zmk_to_pdf/: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
zmk_to_pdf/src/: generate_layout_pdf.py
zmk_to_pdf/src/zmk_to_pdf/: __init__.py  __main__.py  config.py  constants.py  data_models.py  exceptions.py  key_code_map.py  key_codes.yaml  layer_processor.py  main.py  parser.py  pdf_renderer.py
zmk_to_pdf/tests/: conftest.py  test_constants.py  test_data_models.py  test_exceptions.py  test_key_code_map.py  test_layer_processor.py  test_main.py  test_parser.py  test_pdf_renderer.py
zmk_to_pdf/tests/fixtures/: custom_config_edge_cases.h  custom_config_full.h  custom_config_minimal.h  custom_config_with_extra.h
(+5 files in other folders)
