[project]
name = "zmk-layout-pdf"
version = "0.1.0"
description = "Generate PDF visualizations of ZMK keyboard layouts from custom_config.h files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-reportlab>=4.4.7.20251223",
]
